force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/copado__Quality_Gate_Rule_Condition__c.object-meta.xml
<CustomObject>
    <label>Quality Gate Rule Condition</label>
    <nameField>
        <displayFormat>QGC-{00000}</displayFormat>
        <label>Quality Gate Rule Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Gate Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>