force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/fields/copado__Actions__c.field-meta.xml
<CustomField>
    <fullName>copado__Actions__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Copado Actions in related lists.</description>
    <formula>copado__Quality_Gate_Rule__r.copado__ActionsList__c</formula>
    <label>Copado Actions</label>
    <type>Text</type>
</CustomField>