force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/fields/copado__ExecutionSequence__c.field-meta.xml
<CustomField>
    <fullName>copado__ExecutionSequence__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Execution Sequence in related lists</description>
    <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Execution_sequence__c)</formula>
    <label>Execution Sequence</label>
    <type>Text</type>
</CustomField>