force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/fields/copado__Pipeline__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pipeline where this Quality Gate Condition will be evaluated.</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>