force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Status in related lists.</description>
    <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>