force-app/main/default/objects/copado__Quality_Gate_Rule_Condition__c/fields/copado__Tool__c.field-meta.xml
<CustomField>
    <fullName>copado__Tool__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Tool in related lists.</description>
    <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Tool__c)</formula>
    <label>Tool</label>
    <type>Text</type>
</CustomField>